--- a/docs/source/dpo_trainer.mdx
+++ b/docs/source/dpo_trainer.mdx
@@ -278,6 +278,6 @@ dpo_trainer = DPOTrainer(
 
 [[autodoc]] DPOConfig
 
-## DataCollatorForPreference
+## PreferenceCollator
 
-[[autodoc]] trainer.dpo_trainer.DataCollatorForPreference
+[[autodoc]] trainer.dpo_trainer.PreferenceCollator
